gestion de l'interface graphique

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,13 @@ color-eyre = "0.6.2"
 # Pour la journalisation
 log = "0.4.20"
 env_logger = "0.10.0"
+
+rfd = "0.15.3"     # Pour ouvrir un sélecteur de fichiers cross-platform
+# Pour eframe, vérifiez les fonctionnalités disponibles
+
+# Pour eframe, vérifiez les fonctionnalités disponibles
+# Exemple avec fonctionnalités corrigées
+eframe = { version = "0.24.0", features = ["persistence", "glow"] }  # Ajustez selon les fonctionnalités disponibles
+# Pour le support d'image
+egui_extras = { version = "*", features = ["all_loaders"] }
+image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
