--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,12 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      
+      - uses: actions/checkout@v4  # Updated to v4
+        
       - name: Install Rust
         run: rustup update stable
         
-      - name: Add Windows target (if needed)
+      - name: Add Windows target
         if: matrix.os == 'windows-latest'
         run: rustup target add x86_64-pc-windows-msvc
         
@@ -26,7 +26,7 @@ jobs:
         run: mv target/release/screen-cast-structure-generator.exe target/release/screen-cast-structure-generator-windows.exe
         
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: screen-cast-structure-generator-${{ matrix.os }}
           path: |
@@ -37,16 +37,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4  # Updated to v4
       
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
+      - name: Download Linux Artifact
+        uses: actions/download-artifact@v4  # Updated to v4
         with:
           name: screen-cast-structure-generator-ubuntu-latest
           path: release/linux
       
       - name: Download Windows Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4  # Updated to v4
         with:
           name: screen-cast-structure-generator-windows-latest
           path: release/windows
